# version-aware-lazy-segtree

./: .clang-format  .clang-tidy  .gitignore  CITATION.cff  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
Relevant Papers/: BesherMassri-Segment Trees.md  ErikDemaine-Making Data Structures Confluently Persistent.md  GerthStøltingBrodal-External Memory Fully Persistent Search Trees  Ibtehaz-Multidimensional Segment Trees Can Do Range Updates in Poly-Logarithmic Time.md  JamesDriscoll-Making Data Structures Persistent.md  Okasaki-Purely functional data structures.md
brute_force_versioned_array/: README.md  brute_force.cpp  brute_force.hpp
include/valseg/: brute_force_array.hpp  lazy_segment_tree.hpp
lazy_segment_tree/: README.md  lazy_segment_tree.cpp
src/: brute_force_array.cpp  lazy_segment_tree.cpp
tests/: CMakeLists.txt  brute_force_array_test.cpp  lazy_segment_tree_test.cpp  test_output.txt
tests/deterministic/: test_output.txt  tests_brute_force.cpp  tests_lazy_segment_tree.cpp
